; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mptcp_subr.c_mptcpstats_inc_switch.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/netinet/extr_mptcp_subr.c_mptcpstats_inc_switch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }
%struct.mptses = type { %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { i32 }
%struct.mptsub = type { i32 }

@tcpstat = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mptcpstats_inc_switch(%struct.mptses* %0, %struct.mptsub* %1) #0 {
  %3 = alloca %struct.mptses*, align 8
  %4 = alloca %struct.mptsub*, align 8
  %5 = alloca i32, align 4
  store %struct.mptses* %0, %struct.mptses** %3, align 8
  store %struct.mptsub* %1, %struct.mptsub** %4, align 8
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tcpstat, i32 0, i32 0), align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @tcpstat, i32 0, i32 0), align 4
  %8 = load %struct.mptses*, %struct.mptses** %3, align 8
  %9 = getelementptr inbounds %struct.mptses, %struct.mptses* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %9, align 8
  %12 = load %struct.mptses*, %struct.mptses** %3, align 8
  %13 = getelementptr inbounds %struct.mptses, %struct.mptses* %12, i32 0, i32 0
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = load %struct.mptsub*, %struct.mptsub** %4, align 8
  %16 = call i32 @mptcp_get_statsindex(%struct.TYPE_4__* %14, %struct.mptsub* %15)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = icmp ne i32 %17, -1
  br i1 %18, label %19, label %29

19:                                               ; preds = %2
  %20 = load %struct.mptses*, %struct.mptses** %3, align 8
  %21 = getelementptr inbounds %struct.mptses, %struct.mptses* %20, i32 0, i32 0
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = load i32, i32* %5, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %26, align 4
  br label %29

29:                                               ; preds = %19, %2
  ret void
}

declare dso_local i32 @mptcp_get_statsindex(%struct.TYPE_4__*, %struct.mptsub*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
